Implemented the necessary changes

--- a/templates/Beverages.html
+++ b/templates/Beverages.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Ordering</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
+    
     <style>
         
         @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
         @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500');
-
-
-
 
 * {
     margin: 0;
@@ -19,13 +19,13 @@
   }
 
 body{
-    font-family: latha;
     color: white;
     background: linear-gradient(rgba(0,0,0,.6), rgba(0,0,0,.3), rgba(0,0,0,0)
     )
         ,url(https://images.pexels.com/photos/1640777/pexels-photo-1640777.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260)no-repeat;
     background-size: cover;
-    font-family: "Poppins", sans-serif;
+    /*font-family: "Poppins", sans-serif;*/
+    font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,7 +40,7 @@ body{
     height: 100%;
     /*background: #042331;*/
     /*background: #343148FF;*/
-    background: salmon;
+    background: grey;
     transition: all .5s ease;
 }
 .sidebar header {
@@ -60,6 +60,7 @@ body{
     line-height: 65px;
     font-size: 20px;
     color: white;
+    text-decoration: none;
     padding-left: 40px;
     box-sizing: border-box;
     border-bottom: 1px solid black;
@@ -87,14 +88,14 @@ ul li:hover a{
 .box ul li{
     width: 180px;
     float: left;
-    margin: 10px auto;
+    margin: 10px;
     text-align: center;
 }
 
 .box ul li a{
     text-decoration: none;
     color: gainsboro;
-    font-size: 15px;
+    font-size: 25px;
 }
 
 .box ul li:hover{
@@ -103,7 +104,7 @@ ul li:hover a{
 
 .box ul li a:hover{
     color: white;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 
