--- a/templates/Cart.html
+++ b/templates/Cart.html
@@ -1,5 +1,9 @@
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
+    
         <style>
 
             body{
@@ -21,14 +25,14 @@
 .box ul li{
     width: 180px;
     float: left;
-    margin: 10px auto;
+    margin: 10px;
     text-align: center;
 }
 
 .box ul li a{
     text-decoration: none;
     color: gainsboro;
-    font-size: 15px;
+    font-size: 25px;
 }
 
 .box ul li:hover{
@@ -37,7 +41,7 @@
 
 .box ul li a:hover{
     color: white;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .container row{
