--- a/templates/EmptyCart.html
+++ b/templates/EmptyCart.html
@@ -21,14 +21,14 @@
 .box ul li{
     width: 180px;
     float: left;
-    margin: 10px auto;
+    margin: 10px;
     text-align: center;
 }
 
 .box ul li a{
     text-decoration: none;
     color: gainsboro;
-    font-size: 15px;
+    font-size: 25px;
 }
 
 .box ul li:hover{
@@ -37,7 +37,7 @@
 
 .box ul li a:hover{
     color: white;
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .container row{
